# purrtunes

./: .gitignore  README.md
ai-music-bot/: helper.txt  pyproject.toml
ai-music-bot/ai_music_bot/: bot.py  main.py  utils.py
ai-music-bot/privy_auth_frontend/: next.config.ts  package-lock.json  package.json
ai-music-bot/privy_auth_frontend/app/: layout.tsx  page.tsx
ai-music-bot/privy_auth_frontend/app/api/sendMessage/: route.ts
ai-music-bot/privy_auth_frontend/app/components/: providers.tsx
ai-music-bot/purrtunes_contract/: Cargo.toml  contract.abi
ai-music-bot/purrtunes_contract/src/: lib.rs  main.rs
